--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   },
   "homepage": "https://github.com/yamadapc/node-inspectweb#readme",
   "dependencies": {
+    "bluebird": "^3.1.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "object-hash": "^1.0.0",
     "open": "0.0.5"
   }
 }
