--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bluebird": "^3.3.4",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "js-yaml": "^3.6.1",
     "object-hash": "^1.1.2",
     "open": "0.0.5"
   }
